fix(.close) :  z-index: 7; pour corriger le bug de fermeture de modal en mobile

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -196,13 +196,13 @@ main {
 .bground {
   display: none;
   position: fixed;
-  z-index: 1;
   left: 0;
   top: 0;
   height: 100%;
   width: 100%;
   overflow: auto;
   background-color: rgba(26, 39, 156, 0.4);
+  z-index: 7;
 }
 
 /* Apparition de la modal */
